# my-agent

./: .gitignore  CLAUDE.md  README.md  pixi.toml  pyproject.toml  pytest.ini
.github/workflows/: tests.yml
examples/: basic_agent.py  sub_agents.py  tic_tac_toe.py
src/agent_cli/: __init__.py  main.py  policy.py  ttt.py
src/agent_cli/examples/: __init__.py  main.py  sub_agents.py  ttt.py
src/agent_core/: agent.py  harness.py  main_loop.py
src/agent_core/context/: context.py
src/agent_core/prompts/: composer.py  prompts.py
src/agent_core/providers/: __init__.py  base.py  ollama_provider.py
src/agent_core/tools/: add_numbers.py  base.py  browser.py  executor.py  parser.py  tool.py  tools_factory.py
src/agent_tools/: files_tool.py  tools.py
src/agentlib/: __init__.py
src/agentlib/cli/: utilis.py
src/agentlib/core/: agent.py  context.py  loop.py
src/agentlib/core/prompts/: prompts.py
src/agentlib/providers/: base.py  ollama.py
src/agentlib/tools/: executor.py  tool.py
src/agentlib/tools/builtin/: basic.py
tests/: test_context.py  test_policy.py  test_providers_contract.py  test_tools.py
tests/cli/: test_policy.py
tests/core/: test_agent.py  test_context.py
tests/fixtures/: tool_call_valid.json
tests/providers/: test_contract.py
tests/tools/: test_executor.py
