[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agentlib"
version = "0.1.0"
description = "A Python agentic AI framework for building autonomous agents"
authors = [{ name = "Akayou Adane Kitessa", email = "akuadane1205@gmail.com" }]
requires-python = ">=3.11"
dependencies = [
    "llmx>=0.0.21a0,<0.0.21a1",
    "colorama>=0.4.6,<0.5",
    "requests",
]

[tool.hatch.build.targets.wheel]
packages = ["src/agentlib"]

[tool.ruff]
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true

[tool.pytest.ini_options]
pythonpath = ["."]
markers = ["integration: requires a running Ollama instance"]
